# star-dodger

./: .gitignore  LICENSE  README.md  go.mod  go.sum  pyproject.toml  star-dodger.bas  star_dodger_plus.py  test_star_dodger_plus.py
.github/workflows/: ci.yml  release-go.yml
cmd/stardodgerplus/: main.go
go/cmd/stardodgerplus/: main.go
go/internal/cpcfont/: font.go
go/internal/nameentry/: nameentry.go
internal/nameentry/: nameentry_test.go
python/stardodger/: __init__.py  classic.py  plus.py
python/tests/: test_plus.py
rust/: Cargo.toml
rust/src/: main.rs
scripts/: generate_screenshots.py
